--- a/TheDemo/Base.lproj/Main.storyboard
+++ b/TheDemo/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="FPz-HL-6cH" secondAttribute="trailing" id="4ey-gd-pFe"/>
                                     <constraint firstItem="FPz-HL-6cH" firstAttribute="leading" secondItem="ARH-cr-Sz4" secondAttribute="leading" id="clR-Yb-bZs"/>
@@ -118,7 +118,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UZE-Qk-IOT">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="877"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label teststsdf sdfsf sdfs d fsdf  fs fsd f" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="w0u-Hs-lcL">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label teststsdf sdfsf sdfs d fsdf  fs fsd f" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.20000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="w0u-Hs-lcL">
                                                 <rect key="frame" x="16" y="86" width="267" height="75"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="75" id="n51-5t-6ke"/>
@@ -127,7 +127,7 @@
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ZBJ-Mn-hdR">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.20000000000000001" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZBJ-Mn-hdR">
                                                 <rect key="frame" x="299" y="113.5" width="60" height="20.5"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="60" id="bDh-d1-6hS"/>
@@ -158,7 +158,7 @@
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <color key="tintColor" name="accent"/>
-                                                <state key="normal" backgroundImage="icons8-cancel-filled-50">
+                                                <state key="normal" backgroundImage="closeIcon">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
@@ -280,7 +280,7 @@
     </scenes>
     <resources>
         <image name="bg" width="375" height="667"/>
-        <image name="icons8-cancel-filled-50" width="50" height="50"/>
+        <image name="closeIcon" width="50" height="50"/>
         <image name="splash" width="375" height="667"/>
         <namedColor name="accent">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
